src/styles/global.css
/* themes */

:root {
  --font-emoji: "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  --font-sans: -apple-system, BlinkMacSystemFont,
    "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell,
    Helvetica, Arial, sans-serif, var(--font-emoji);

  --color-bg-primary: #f0f0f0;
  --color-bg-secondary: #e0e0e0;
  --color-text-primary: #101010;
  --color-text-accent: #007aff;

  color-scheme: light dark;

  font-size: 18px;
  line-height: 1.6;
  font-family: var(--font-sans);
  color: var(--color-text-primary);
  background-color: var(--color-bg-primary);
  accent-color: var(--color-text-accent);
}

.astro-code,
.astro-code span {
  color: var(--shiki-light);
  background-color: var(--color-bg-secondary);
}

@media (prefers-color-scheme: dark) {
  :root {
    --color-bg-primary: #101010;
    --color-bg-secondary: #282828;
    --color-text-primary: #f0f0f0;
    --color-text-accent: #0a84ff;
  }

  .astro-code,
  .astro-code span {
    color: var(--shiki-dark);
  }
}

[data-theme="light"] {
  --color-bg-primary: #f0f0f0;
  --color-bg-secondary: #e0e0e0;
  --color-text-primary: #101010;
  --color-text-accent: #007aff;

  color-scheme: light;

  .astro-code,
  .astro-code span {
    color: var(--shiki-light);
  }
}

[data-theme="dark"] {
  --color-bg-primary: #101010;
  --color-bg-secondary: #282828;
  --color-text-primary: #f0f0f0;
  --color-text-accent: #0a84ff;

  color-scheme: dark;

  .astro-code,
  .astro-code span {
    color: var(--shiki-dark);
  }
}

/* base styles */

body {
  max-width: 768px;
  margin: 0 auto;
  padding: 1em;
}

/* headers */

h1, h2, h3, h4, h5, h6 {
  margin: 1rem 0;
}

h1 {
  font-size: 2rem;
  line-height: 1.125;
}

h2 {
  font-size: 1.5rem;
  line-height: 1.15;
}

h3 {
  font-size: 1.375rem;
  line-height: 1.175;
}

h4 {
  font-size: 1.25rem;
  line-height: 1.2;
}

h5 {
  font-size: 1.125rem;
  line-height: 1.225;
}

h6 {
  font-size: 1rem;
  line-height: 1.25;
}

/* block quotes */

blockquote {
  margin: 1em 0;
  padding-left: 0.6em;
  border-left: 3px solid var(--color-bg-secondary);
}

/* inline code blocks */

:not(.astro-code) > code {
  background-color: var(--color-bg-secondary);
  padding: 0 3px;
  border-radius: 4px;
}

/* links */

a {
  color: var(--color-text-accent);
}

/* code blocks */

.astro-code {
  padding: 0.4em 0.6em;
  border-radius: 4px;
}

/* tables */

table {
  border-collapse: collapse;
}

th,
td {
  border: 1px solid var(--color-bg-secondary);
  padding: 0 0.4em;
}

/* lists */

ul,
ol {
  padding-left: 1.2em;
}

/* icons */

svg {
  vertical-align: text-bottom;
  font-size: 1.2em;
}

/* horizontal rule */

hr {
  border: 1px solid var(--color-bg-secondary);
}

/* nav */

nav {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  gap: 0 1em;
}

nav ul {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
  flex-wrap: wrap;
  gap: 0 1em;
}

nav a {
  text-decoration: none;
}

nav select {
  color: var(--color-text-primary);
  background-color: var(--color-bg-secondary);
  padding: 0.2rem;
  border: none;
  border-radius: 4px;
  font-size: 0.75em;
}

/* article header */

article > header {
  margin: 1rem 0;
}

article > header > * {
  margin: 0;
}

article > header ul {
  list-style: none;
  margin: 0;
  padding: 0;
  display: inline-flex;
  flex-wrap: wrap;
  gap: 0 0.3rem;
}

